# pygemini

src/gemini3d/: CMakeLists.txt  job.py  magtools.py  msis.py
src/gemini3d/cmake/: __init__.py  libraries.cmake
src/gemini3d/grid/: tilted_dipole.py
src/gemini3d/hdf5/: read.py
src/gemini3d/nc4/: read.py
src/gemini3d/tests/: test_msis.py
